: small style  fixes on mobile

--- a/DoggyFriction/Content/Site.less
+++ b/DoggyFriction/Content/Site.less
@@ -406,8 +406,7 @@ table.table>tfoot {
             }
         }
         input, select {
-            width: 100%;
-            max-width: 400px;
+            width: 200px;
         }
         label {
             margin-right: 15px;
